tests/neg/experimental-message-experimental-flag.check

-- Error: tests/neg/experimental-message-experimental-flag/Test_2.scala:3:10 -------------------------------------------
3 |def g() = f() // error
  |          ^
  |          method f is marked @experimental: Added by -experimental or -language:experimental.*
  |
  |          Experimental definition may only be used under experimental mode:
  |            1. in a definition marked as @experimental, or
  |            2. an experimental feature is imported at the package level, or
  |            3. compiling with the -experimental compiler flag.
